--- a/template-app/app/views/bx_block_faq_and_contact_us/contact_us_mailer/contact_us_email.html.erb
+++ b/template-app/app/views/bx_block_faq_and_contact_us/contact_us_mailer/contact_us_email.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h1>Hey,</h1>
   <p> 
-    <b> <%= @account.name %> </b></br>
+    <p>You have received this email from <%= "#{ @account.name }" %></p></br>
     <%= @account.email %> </br>
     <%= @account.message %>
   </p>
