--- a/template-app/app/assets/stylesheets/active_admin.css.scss
+++ b/template-app/app/assets/stylesheets/active_admin.css.scss
@@ -9,3 +9,33 @@
 		margin-top: 0;
 	}
 };
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  top: 100px;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+.img_preview {
+	width: 100%; /* Full width */
+  height: 100%; /* Full height */
+}
+
+.short_image {
+	width: 50px;
+  height: 50px;
+}
